--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -104,7 +104,7 @@ We looked at the proportion of CUs that had status estimates above the red zone 
 
 The single-metric approach to assessing CU status based on percentiles has specific data requirements (@holtEvaluatingBenchmarksBiological2018) while the Salmon Scanner approach can be applied to any CU with at least a consistent time-series of spawner abundances. To compare LRPs based on CU assessment from these two approaches we compared data subsets including those that used the same data for each method, and all appropriate data for each method. We evaluated six different combinations of data and LRP methods (Table \@ref(tab:LRP-scenarios)). For this comparison, we used percentile benchmarks based on @holtEvaluatingBenchmarksBiological2018. The benchmarks were estimated using the entire time series. 'Full' scenarios only included CUs with complete time series (no CUs with years with CU-level infilling). 'Partial' scenarios included CUs with incomplete time series, where the years that did not have observations in those CUs were omitted. 
 
-For scenarios 1 and 2, we used CU status based on percentile benchmarks that are determined by productivity and historical exploitation outlined in @holtEvaluatingBenchmarksBiological2018 (Table \@ref(tab:LRP-scenarios)). This method used the raw annual escapement values to calculate the benchmarks and the generational mean (geometric mean of 4 years) of escapement for year $i$ and previous three years to assess status in year $i$. Scenario 1 includes the four CUs which had complete time series (observations in each year, no CU-level infilling required) and that also had appropriate percentile benchmarks based on @holtEvaluatingBenchmarksBiological2018. For example, Upper Knight was excluded because it did not have a complete time series, Southern Coastal Streams was excluded because it does not have an appropriate percentile benchmark, and Bute Inlet was excluded for both of these reasons. We then relaxed this assumption and included all CUs that meet the constraints of @holtEvaluatingBenchmarksBiological2018 even if they had missing data for some years (Scenario 2). This scenario included Upper Knight in some years, which meant that it had five CUs in some years and four in others. Thus, the power to detect red status varied among years in Scenario 2, using more of the available data than Scenario 1. For scenarios 3-6, we used status based on the Salmon Scanner. To compare results between status from percentiles and the Salmon Scanner, we used the Salmon Scanner on the same two data sets we used for percentiles. Scenarios 3 and 1 have the same data, and Scenarios 2 and 6 have the same data. Because the Salmon Scanner does not need benchmarks (percentile or otherwise) to assign status, it could also be used for CUs that did not have appropriate percentile benchmarks (Southern Coastal Streams and Bute Inlet). Scenario 4 only included CUs with a full time series, and Scenario 5 included Upper Knight and Bute Inlet, which had some missing years. 
+For scenarios 1 and 2, we used CU status based on percentile benchmarks that are determined by productivity and historical exploitation outlined in @holtEvaluatingBenchmarksBiological2018 (Table \@ref(tab:LRP-scenarios)). This method used the annual escapement values to calculate the benchmarks and the generational mean (geometric mean of 4 years) of escapement for year $i$ and previous three years to assess status in year $i$. Scenario 1 includes the four CUs which had complete time series (observations in each year, no CU-level infilling required) and that also had appropriate percentile benchmarks based on @holtEvaluatingBenchmarksBiological2018. For example, Upper Knight was excluded because it did not have a complete time series, Southern Coastal Streams was excluded because it does not have an appropriate percentile benchmark, and Bute Inlet was excluded for both of these reasons. We then relaxed this assumption and included all CUs that meet the constraints of @holtEvaluatingBenchmarksBiological2018 even if they had missing data for some years (Scenario 2). This scenario included Upper Knight in some years, which meant that it had five CUs in some years and four in others. Thus, the power to detect red status varied among years in Scenario 2, using more of the available data than Scenario 1. For scenarios 3-6, we used status based on the Salmon Scanner. To compare results between status from percentiles and the Salmon Scanner, we used the Salmon Scanner on the same two data sets we used for percentiles. Scenarios 3 and 1 have the same data, and Scenarios 2 and 6 have the same data. Because the Salmon Scanner does not need benchmarks (percentile or otherwise) to assign status, it could also be used for CUs that did not have appropriate percentile benchmarks (Southern Coastal Streams and Bute Inlet). Scenario 4 only included CUs with a full time series, and Scenario 5 included Upper Knight and Bute Inlet, which had some missing years. 
 
 
 
