--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -3,8 +3,7 @@
 ## Background
 
 <!--CH comment: change all reference of multidimensional tool to the Pacific Salmon Status Scanner and for short the Salmon Scanner-->
-Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisions that introduce legal
-obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005a].
+Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisions that introduce legal obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005a].
 
 Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002a]. Because allee effects are only infrequently observed among marine fish species [@keithPopulationDynamicsMarine2012], and rarely detected for Pacific salmon (but see @cunninghamSizeSelectivityPredation2013), a biological basis for serious harm is often difficult to identify. 
 
