--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -324,10 +324,10 @@ The Wald Test showed that logistic model coefficient for aggregate abundance was
  Box-Tidwell p-value     & 0.44  & 0.94  & 0.79   \\
  Max. deviance residual  & 1.98  & 1.81  & 1.66   \\
  AR-1                    & -0.07 & 0.09  & 0.05   \\
- Wald p-values           & 0.07^*& 0.06^*& 0.09^* \\
+ Wald p-values           & $0.07^*$& $0.06^*$& $0.09^*$ \\
  Goodness-of-fit p-value & <0.01 & <0.01 & <0.01  \\
  Pseudo-$R^2$            & 0.60  & 0.61  & 0.40   \\
- Hit Ratio (p= 50%, 66%, 90%, 99%) & 0.87, 0.83, 0.74, 0.70  & 0.83, 0.83, 0.83, 0.74 &  0.76, 0.71, 0.76, 0.52 \\
+ Hit Ratio (p= 50\%, 66\%, 90\%, 99\%) & 0.87, 0.83, 0.74, 0.70  & 0.83, 0.83, 0.83, 0.74 &  0.76, 0.71, 0.76, 0.52 \\
 \hline
 \end{tabular}
 (\#tab:holt-tab6)
