--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -24,20 +24,25 @@ Under the WSP, the assessment of Pacific salmon has focused on setting benchmark
 
 ## Review of Reference Points for Pacific Salmon
  <!--
-CW: Consider changing this subtitle to "Reference Points and management benchmarks for Pacific Salmon populations
+
 CH: I think we should keep benchmarks as biological values as defined in the WSP, i.e. not management benchmarks. We've spent along time trying to differentiate biologically based benchmarks developed under the WSP for OCPs used in management". Also, I moved the reference to other policies up, and am trying to differentiate LRPs from OCPs, though LRPs can inform OCPs (and are used in them sometimes) I'd like to distinguish them at least theoretically, so added some text explicitly on this above and made some revisions here--> 
 
-LRPs are commonly used in the assessment and management for marine fisheries where they are used to identify and communicate statuses and inform harvest control rules. Reviews of the application of reference points and harvest control rules can be found in @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010. @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest control rules and management procedures in data-poor fisheries. In Canada, @sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and LRPs before the publication of DFO's Precautionary Approach Framework in 2009. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 12 years after the publication of DFO's Precautionary Approach Framework, a review by @marentetteSpecificationPrecautionaryApproach2021 showed that the principles of the Framework, including the adoption of LRPs, are now widespread in the management of Canadian stocks. This review was based on a survey of 177 Canadian stocks of cultural, economic and/or environmental importance, excluding salmonids and transboundary stocks. They identified that 102 stocks had adopted LRPs, although the method used to estimate the LRPs varied considerably among stocks. @kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international Policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].
+LRPs are commonly used in the assessment and management for marine fisheries where they are used to identify and communicate statuses and inform harvest control rules. Reviews of the application of reference points and harvest control rules can be found in @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010. @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest control rules and management procedures in data-poor fisheries. In Canada, @sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and LRPs before the publication of DFO's Precautionary Approach Framework in 2009. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 12 years after the publication of DFO's Precautionary Approach Framework, a review by @marentetteSpecificationPrecautionaryApproach2021 showed that the principles of the Framework, including the adoption of LRPs, are now widespread in the management of Canadian stocks. This review was based on a survey of 177 Canadian stocks of cultural, economic and/or environmental importance, excluding salmonids and transboundary stocks. They identified that 102 stocks had adopted LRPs, although the method used to estimate the LRPs varied considerably among stocks. @kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].
 
 Less frequently, multidimensional approaches that aggregate status over numerous biological characteristics have been applied to indicate serious harm to marine fish species. These approaches are particularly relevant when traditional abundance-based metrics are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of multiple data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab in Canada, where data on CPUE, egg clutches and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018].
+
+<!-- CW: Maybe move the spatial scale general pgh from below here? 
+
+-->
 
 For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks in the US (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. 
 
 
-Under Canada's WSP, status assessments generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity, with benchmarks along each metric [@holtEvaluationBenchmarksConservation2009].  One advantage of this approach is that CUs missing data for any single metric can still be evaluated against remaining metrics, making the framework applicable across a relatively broad range of CUs. A second advantage is that a single-metric dropping below the benchmark may not trigger red status over all given high variability in abundances for some CUs. In general, persistence at low levels below abundance-based benchmarks and significant declining trends are required for red status overall. <!--CH comment; this is still a problem for logistic regression based LRPs that are impacted by CUs dropping below LBMs in only a single year even if not associated with what local experts would deem serious harm. I have highlighted this as uncertainty for that approach in the last chapter of this WP.--> Expert-driven processes to integrate sometimes conflicting metrics within the multidimensional framework have been implemented for numerous Pacific salmon stocks in Canada (e.g., Fraser River Sockeye Salmon, *Oncorhynchus nerka* [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon, *Oncorhynchus kisutch* [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon, *Oncorhynchus tshawytscha* [@dfoIntegratedBiologicalStatus2016]). One challenge in implementing these expert-driven assessments is high demand on time and staff resources. Based on the consistencies that emerged from assessments where the integration of multiple metrics has been applied, (Pestal et al. in prep) developed an algorithm to approximate overall WSP status by combining those metrics in a decision tree, at the scale of CUs. This algorithm, known as the Rapid Multidimensional Scanning Tool, was ground-truthed by local assessment experts and tested with stocks not included in the original formulation.
+Under Canada's WSP, status assessments generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity, with benchmarks along each metric [@holtEvaluationBenchmarksConservation2009].  One advantage of this approach is that CUs missing data for any single metric can still be evaluated against remaining metrics, making the framework applicable across a relatively broad range of CUs. A second advantage is that a single-metric dropping below the benchmark may not trigger red status over all given high variability in abundances for some CUs. In general, persistence at low levels below abundance-based benchmarks and significant declining trends are required for red status overall. <!--CH comment; this is still a problem for logistic regression based LRPs that are impacted by CUs dropping below LBMs in only a single year even if not associated with what local experts would deem serious harm. I have highlighted this as uncertainty for that approach in the last chapter of this WP.
+CW: True, but unless that year is the only (or one of a few) red status years, the aggregate abundance LRP estimate should be robust to that "false red status"--> Expert-driven processes to integrate sometimes conflicting metrics within the multidimensional framework have been implemented for numerous Pacific salmon stocks in Canada (e.g., Fraser River Sockeye Salmon, *Oncorhynchus nerka* [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon, *Oncorhynchus kisutch* [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon, *Oncorhynchus tshawytscha* [@dfoIntegratedBiologicalStatus2016]). One challenge in implementing these expert-driven assessments is high demand on time and staff resources. Based on the consistencies that emerged from assessments where the integration of multiple metrics has been applied, (Pestal et al. in prep) developed an algorithm to approximate overall WSP status by combining those metrics in a decision tree, at the scale of CUs. This algorithm, known as the Rapid Multidimensional Scanning Tool, was ground-truthed by local assessment experts and tested with stocks not included in the original formulation.
 
 
-In some cases, single-metric approaches in which spawning biomass is compared with an abundance-based benchmark, have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and occasionally within DFO (e.g., Barkley Sockeye Salmon @chaputConsiderationsDefiningReference2012). While biological assessments under the WSP are implemented at the scale of Conservation Unit, CU, fisheries management often operates at larger scales, aggregating over multiple CUs. For some stock aggregates, harvest control rules are developed to achieve a low probability of  individual CUs breaching their lower benchmark on spawner abundances, among other socio-economic considerations, e.g., Fraser River sockeye salmon [@chaputConsiderationsDefiningReference2012]. This approach supports management of weak stocks and is aligned with DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009].
+In some cases, single-metric approaches in which spawning biomass is compared with an abundance-based benchmark, have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and occasionally within DFO (e.g., Barkley Sockeye Salmon @chaputConsiderationsDefiningReference2012). While biological assessments under the WSP are implemented at the scale of Conservation Unit, CU, fisheries management often operates at larger scales, aggregating over multiple CUs. For some stock aggregates, harvest control rules are developed to achieve a low probability of individual CUs breaching their lower benchmark on spawner abundances, among other socio-economic considerations, e.g., Fraser River sockeye salmon [@chaputConsiderationsDefiningReference2012]. This approach supports management of weak stocks and is aligned with DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009].
 
 
 <!--KH: 
@@ -53,10 +58,12 @@ CH: I added this to CH4, step 7, when deciding if aggregate-abundance based LRPs
 
 ## Alternative spatial scales
 
-The Fish Stock provision pertain to the management of fisheries. For Pacific salmon, threats occur at a range of spatial scales from local habitat disturbances impacting local spawning habitat, to regional-scale climate changes. Also, multiple levers are used by managers to achieve objectives for Pacific salmon which extend beyond fisheries, including habitat restoration and hatchery enhancement, which also occur at a variety of spatial scales.  Indeed, for many SMUs, fisheries have been limited in recent years [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. These decisions require stock assessments and responses at a hierarchy of spatial scales from a watershed-level within CUs to larger aggregates of CUs at regional-scales, sometimes across Pacific salmon species. The LRPs presented here are applied at the SMU scale, though methods could also be applied at smaller or larger scales to inform a variety management decisions.
+The Fish Stock provision pertain to the management of fisheries. For Pacific salmon, threats occur at a range of spatial scales from local habitat disturbances impacting local spawning habitat, to regional-scale climate change. Also, multiple levers are used by managers to achieve objectives for Pacific salmon which extend beyond fisheries, including habitat restoration and hatchery enhancement, which also occur at a variety of spatial scales.  Indeed, for many SMUs, fisheries have been limited in recent years [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. These decisions require stock assessments and responses at a hierarchy of spatial scales from a watershed-level within CUs to larger aggregates of CUs at regional-scales, sometimes across Pacific salmon species. The LRPs presented here are applied at the SMU scale, though methods could also be applied at smaller or larger scales to inform a variety management decisions.
 
 Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC and Management Units under the Pacific Salmon Treaty. These units are not aligned with the biological unit of conservation under DFO's WSP, CU, and are not considered further here.
 
+
+<!--CW: I am not sure this paragraph should be here, it reads more like a review -->
 A mismatch in scales among biological stocks, the unit of management, and the spatial scale of data collection are not uncommon among marine fish species, especially invertebrate species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020], creating challenges when identifying LRPs [@dfoScienceAdvicePrecautionary2021]. This mismatch can make undesirable states in fish populations difficult to detect, and weaken the effectiveness of resulting management measures. <!--CH: could include snow crab example from Mullowney et al. 2020 if we wanted to flush this out a bit. I couldn't find any reference for American Lobster- i.e., Adam Cook's ppt from TESA workshop-->
 
 ## Goals of Working Paper
